// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryString Utils handles keyword when it has multiple values 1`] = `
Object {
  "FacetSelections": Object {},
  "Keyword": "this is my keyword,which should be a long string",
  "MaxPerPage": undefined,
  "PageNo": undefined,
  "SearchWithin": undefined,
  "SortBy": undefined,
}
`;

exports[`QueryString Utils handles keyword when parsing 1`] = `
Object {
  "FacetSelections": Object {
    "brand": Array [
      "cool",
      "kinda-cool",
    ],
    "color": Array [
      "black",
    ],
  },
  "Keyword": "this is my keyword",
  "MaxPerPage": undefined,
  "PageNo": undefined,
  "SearchWithin": undefined,
  "SortBy": undefined,
}
`;

exports[`QueryString Utils handles query params with no values 1`] = `
Object {
  "FacetSelections": Object {},
  "Keyword": "men",
  "MaxPerPage": undefined,
  "PageNo": undefined,
  "SearchWithin": undefined,
  "SortBy": undefined,
}
`;

exports[`QueryString Utils parses facets into arrays 1`] = `
Object {
  "FacetSelections": Object {
    "brand": Array [
      "cool",
    ],
    "color": Array [
      "black",
    ],
  },
  "Keyword": undefined,
  "MaxPerPage": undefined,
  "PageNo": undefined,
  "SearchWithin": undefined,
  "SortBy": undefined,
}
`;

exports[`QueryString Utils parses facets into arrays and handles question mark 1`] = `
Object {
  "FacetSelections": Object {
    "brand": Array [
      "cool",
    ],
    "color": Array [
      "black",
    ],
  },
  "Keyword": undefined,
  "MaxPerPage": undefined,
  "PageNo": undefined,
  "SearchWithin": undefined,
  "SortBy": undefined,
}
`;

exports[`QueryString Utils parses multiple facet values into arrays 1`] = `
Object {
  "FacetSelections": Object {
    "brand": Array [
      "cool",
      "kinda-cool",
    ],
    "color": Array [
      "black",
    ],
  },
  "Keyword": undefined,
  "MaxPerPage": undefined,
  "PageNo": undefined,
  "SearchWithin": undefined,
  "SortBy": undefined,
}
`;

exports[`QueryString Utils parses search within 1`] = `
Object {
  "FacetSelections": Object {
    "brand": Array [
      "cool",
    ],
    "color": Array [
      "black",
    ],
  },
  "Keyword": undefined,
  "MaxPerPage": undefined,
  "PageNo": undefined,
  "SearchWithin": "blah blah",
  "SortBy": undefined,
}
`;

exports[`QueryString Utils turns arrays into query string 1`] = `"?color=black&brand=cool"`;

exports[`QueryString Utils turns arrays with multiple values into query string 1`] = `"?color=black&brand=cool,kinda-cool"`;

exports[`QueryString Utils turns arrays with multiple values into query string and handles keyword 1`] = `"?keyword=this is my keyword&color=black&brand=cool,kinda-cool"`;
